# server-cpp

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: dotenv.h  middleware.h  stdx_optional.hpp
include/crow/: socket_adaptors.h
include/database/: mongo_client.h
include/middlewares/: cors.h  is_author.h  is_logged_in.h  log_middleware.h  validate_listing.h  validate_user.h
src/: main.cpp
src/controllers/listings/: create_controller.cpp  create_controller.h  delete_controller.cpp  delete_controller.h  read_controller.cpp  read_controller.h  read_one_controller.cpp  read_one_controller.h  update_controller.cpp  update_controller.h
src/controllers/user/: create_controller.cpp  create_controller.h  read_controller.cpp  read_controller.h
src/database/: mongo_client.cpp
src/routes/: listings.cpp  listings.h  user.cpp  user.h
